# reproducing-dl-papers

./: README.md
complex-network-classification-with-cnn/: README.md  complex_network_classification_cnn.ipynb  karateclub-introduction.ipynb
complex-network-classification-with-cnn/data/smaller_images/: ba_networks_N=200_k=4_length=1000_n=1000_size=28x28.pickle  ba_networks_N=200_k=4_length=1000_n=100_size=28x28.pickle  ba_networks_N=200_k=4_length=1000_n=10_size=28x28.pickle  ba_networks_N=200_k=4_length=1000_n=110_size=28x28.pickle  ba_networks_N=200_k=4_length=1000_n=120_size=28x28.pickle  ba_networks_N=200_k=4_length=1000_n=130_size=28x28.pickle  ba_networks_N=200_k=4_length=1000_n=140_size=28x28.pickle  ba_networks_N=200_k=4_length=1000_n=150_size=28x28.pickle  (+192 more)
conv_net_sentence_classification/: .gitignore  Base model with word2vec .ipynb  Base models (one-hot word encoding).ipynb  Convolutional Neural Networks for Sentence Classification.ipynb
conv_net_text_classification/: .gitignore  Base model (LSTM with word embedding) .ipynb  Base models (one-hot word encoding).ipynb  ConvNet character based.ipynb  ConvNet word based.ipynb  README.md  convolutional + dense word2vec.ipynb  word2vec model.ipynb
conv_net_text_classification/models/: checkpoint  cnn_chars_61x50.data-00000-of-00002  cnn_chars_61x50.index  cnn_words_300x25.data-00000-of-00002  cnn_words_300x25.index
detecting_hate_speech_social_media/: .gitignore  README.md  base_model.ipynb  sent2vec_neural_network.ipynb  transformers_nn.ipynb
homophily_structural_balance/: .gitignore  CMakeLists.txt  README.md  plot_positive_edge_density.py  profile_simulation.sh
homophily_structural_balance/plotting/: phase_diagram_rho_p.py  plot_positive_edge_density.py
homophily_structural_balance/src/: CompleteGraph.hpp  Experiments.hpp  Graph.hpp  Metrics.h  Metrics.hpp  Node.hpp  Simulation.h  Simulation.hpp  Utils.h  Utils.hpp  main.cpp
(+760 files in other folders)
